[gd_scene load_steps=12 format=2]

[ext_resource path="res://hud/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://audio/sounds/hit.wav" type="AudioStream" id=2]
[ext_resource path="res://hud/LanguageSwitcher/LanguageSwitcher.tscn" type="PackedScene" id=3]
[ext_resource path="res://custom_nodes/Keyboard/Keyboard.tscn" type="PackedScene" id=4]
[ext_resource path="res://hud/PlayerStats/PlayerStats.tscn" type="PackedScene" id=5]
[ext_resource path="res://hud/PauseMenu/PauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://hud/GameOverScreen/GameOverScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://audio/sounds/hit2.wav" type="AudioStream" id=8]
[ext_resource path="res://images/pause_up.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "hit"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.67451, 0.196078, 0.196078, 0 ), Color( 0.67451, 0.196078, 0.196078, 1 ), Color( 0.67451, 0.196078, 0.196078, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "hit_enemy"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.356863, 0.431373, 0.882353, 0 ), Color( 0.356863, 0.431373, 0.882353, 1 ), Color( 0.356863, 0.431373, 0.882353, 0 ) ]
}

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="Flash" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.356863, 0.431373, 0.882353, 0 )

[node name="Anim" type="AnimationPlayer" parent="Flash"]
anims/hit = SubResource( 1 )
anims/hit_enemy = SubResource( 2 )

[node name="Audio" type="AudioStreamPlayer" parent="Flash"]
stream = ExtResource( 2 )

[node name="Audio2" type="AudioStreamPlayer" parent="Flash"]
stream = ExtResource( 8 )

[node name="ButtonLang" parent="." instance=ExtResource( 3 )]

[node name="Keyboard" parent="." instance=ExtResource( 4 )]
visible = false

[node name="PlayerStats" parent="." instance=ExtResource( 5 )]
margin_bottom = 60.0

[node name="PauseMenu" parent="." instance=ExtResource( 6 )]
visible = false

[node name="GameOverScreen" parent="." instance=ExtResource( 7 )]
visible = false

[node name="PauseButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -48.0
size_flags_horizontal = 10
size_flags_vertical = 0
texture_normal = ExtResource( 10 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
